--- a/views/css/style.css
+++ b/views/css/style.css
@@ -1,6 +1,6 @@
-/** {
+* {
   outline: 1px solid red !important;
-}*/
+}
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -23,6 +23,10 @@ form {
 
 .centered {
   text-align: center;
+}
+
+#menu {
+  margin: 10px;
 }
 
 #pizzaSize {
@@ -48,4 +52,8 @@ form {
 
  .container {
   background-color: rgba(240, 60, 60, 0.8);
+}
+
+.mover {
+  will-change: transform;
 }
